# clearSKY_AI

./: .env.example  .gitignore  README.md  deployment.md  docker-compose.yml  package-lock.json  package.json  render.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt
apps/api/app/: __init__.py  main.py  worker.py
apps/api/app/ai/: __init__.py
apps/api/app/core/: config.py  exceptions.py  logging.py  middleware.py  responses.py  security.py
apps/api/app/db/: base.py  init_db.py  session.py
apps/api/app/models/: asset.py  benchmark.py  inference.py  job.py  metric.py  model_registry.py  project.py  scene.py  user.py
apps/api/app/schemas/: assets.py  auth.py  benchmarks.py  demo.py  health.py  inference.py  jobs.py  model_registry.py  research_export.py  responses.py  scenes.py
apps/api/app/services/: ai.py  cloudinary_client.py  demo.py  evaluation_engine.py  geospatial.py  geotiff_reader.py  geotiff_writer.py  inference.py  (+10 more)
apps/api/configs/: ai_training.attention_unet.json  ai_training.fast.attention_unet.json  ai_training.fast.fusion.json  ai_training.fast.swin_unet.json  ai_training.fast.unet_cloud.json  ai_training.fusion.json  ai_training.json  ai_training.swin_unet.json  ai_training.unet_cloud.json  fusion_dataset_100.json  fusion_dataset_2000_colab.json  fusion_dataset_500_terabox_colab.json  synthetic_fusion_1000.json  synthetic_fusion_1000_colab.json
apps/api/tests/: test_auth_users.py  test_health.py  test_model_registry.py  test_research_export.py
(+137 files in other folders)
