[project]
name = "clearsky-api"
version = "0.1.0"
description = "FastAPI backend for clearSKY AI."
requires-python = ">=3.11,<3.13"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
